# TradeAlign-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: alpha-radar.yml
app/: config.py  main.py  runner.py
app/agents/: alpha_curator_agent.py  base.py  premarket_email_agent.py  sentiment_digest_agent.py
app/database/: connection.py  init_db.py  models.py  repository.py
app/profiles/: investor_profile.md
app/scrapers/: base.py  earnings_scraper.py  sec_edgar_scraper.py  yahoo_finance_scraper.py
app/services/: email_service.py
